--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 *{
+    /* temporary for seeing box outlines */
     outline: 2px solid red;
+    flex: auto;
 }
 
-.title .header .text {
+.title .text{
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -16,5 +18,6 @@
 }
 
 .text{
-
+    margin:auto;
+    color:black;
 }
