Added Open Sans font

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,9 @@
 }
 
 .title .text{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: "Open Sans", sans-serif;
 }
+
 
 .title{
     margin:auto;
