--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,10 @@
     flex: auto;
 }
 
-.title .text{
-    font-family: "Open Sans", sans-serif;
-}
 
 
 .title{
+    font-family: "Source Serif 4", serif;
     margin:auto;
     font-size: 48px;
     padding: 10px;
@@ -19,6 +17,7 @@
 }
 
 .text{
+    font-family: "Open Sans", sans-serif;
     margin:auto;
     color:black;
 }
