--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,11 @@
     flex: auto;
 }
 
-
+.title .text{
+    font-family: 'Times New Roman', Times, serif;
+}
 
 .title{
-    font-family: "Source Serif 4", serif;
     margin:auto;
     font-size: 48px;
     padding: 10px;
@@ -17,7 +18,6 @@
 }
 
 .text{
-    font-family: "Open Sans", sans-serif;
     margin:auto;
     color:black;
 }
