--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,20 @@
     flex: auto;
 }
 
-.title .text{
-    font-family: 'Times New Roman', Times, serif;
+.source-serif-4 {
+  font-family: "Source Serif 4", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.open-sans {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
 
 .title{
