--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 *{
     /* temporary for seeing box outlines */
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
     flex: auto;
 }
 
@@ -18,6 +18,9 @@
 }
 
 .text{
-    margin:auto;
+    font-size: 0px;
+    padding: 0px;
+    border: 0px;
+    margin: 10px;;
     color:black;
 }
