--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 *{
     /* temporary for seeing box outlines */
-    /* outline: 2px solid red; */
+    /*outline: 2px solid red; */
     font-family: 'Times New Roman', Times, serif;
+    text-wrap: wrap;
     flex: auto;
     border: none;
     margin:auto;
@@ -26,22 +27,31 @@ p{
     color:black;
 }
 
-input[type="text"]{
+textarea[type="text"]{
+
+    /* margins */
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 0px;
+
+    /* color */
     color: black;
     background-color: rgb(245,245,239);
+
+    /* dimenions */
+    height: 100px;
+    width: 500px;
+
+    /* font */
     padding: 15px 15px;
-    width: 350px;
     font-size: 20px;
 }
 
-button[type="spacer"]{
-    width: 15px;
-    height: 15px;
-    color:white;
-    background-color: white;
-}
-
 button[type="submit"]{
+    /* margins */
+    margin-top: 10px;
+    margin-left: 10px;
+
     background-color: rgb(251,242,223);
     color: black;
     padding: 15px 32px;
