--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 *{
     /* temporary for seeing box outlines */
-    /*outline: 2px solid red; */
+    outline: 2px solid red; 
 
     /* format */
     flex: auto;
@@ -13,6 +13,7 @@
     text-align: left;
     text-decoration: none;
 }
+
 body{
     background-color: white;
 }
@@ -65,6 +66,7 @@ button[type="submit"]{
     /* margins */
     margin-top: 10px;
     margin-left: 10px;
+    margin-bottom: 10px;
 
     /* color */
     background-color: rgb(221,186,110);
