Added Submission & Solution buttons

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,10 @@ p[type=question]{
     background-color: rgb(251, 242, 223);
 }
 
+li{
+    padding-left: 15px;
+}
+
 input[type="text"]{
     /* margins */
     margin: 0;
@@ -80,6 +84,23 @@ textarea[type="text"]{
     /* font */
     padding: 10px 10px;
     font-size: 18px;
+}
+
+button[type="header"]{
+    /* margins */
+    margin-top: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+
+    /* color */
+    background-color: rgba(0, 0, 0, 0.1);
+    color: rgba(0, 0, 0, 0.5);
+
+    /* font */
+    float: right;
+    padding: 10px 30px;
+    font-size: 20px;
 }
 
 button[type="submit"]{
